--- a/LoudPLayNewsTask/app/src/main/res/layout/activity_headlines.xml
+++ b/LoudPLayNewsTask/app/src/main/res/layout/activity_headlines.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HeadlinesActivity">
+    tools:context=".ui.headlines.HeadlinesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_headlines_news_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
