--- a/LoudPLayNewsTask/app/src/main/res/layout/activity_topic_news.xml
+++ b/LoudPLayNewsTask/app/src/main/res/layout/activity_topic_news.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TopicNewsActivity">
+    tools:context=".ui.topic.TopicNewsActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
