--- a/LoudPLayNewsTask/app/src/main/res/layout/headlines_row_item.xml
+++ b/LoudPLayNewsTask/app/src/main/res/layout/headlines_row_item.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp">
 
-
-    <ImageView
-        android:id="@+id/image_news_image"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textview_news_title"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        <ImageView
+            android:id="@+id/image_news_image"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4" />
 
-    <TextView
-        android:id="@+id/textview_news_description"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2.5" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/textview_news_title"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/textview_news_description"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2.5" />
+    </LinearLayout>
+
+
+</androidx.cardview.widget.CardView>
